# Mandatory-1

./: README.md
data_servers/: package-lock.json  package.json  pyproject.toml
data_servers/files/: cameras.json  cameras.xml
data_servers/node/: app.js
data_servers/python/: server.py
date_servers/: package-lock.json  package.json  pyproject.toml
date_servers/node/: server.js
date_servers/python/: server.py
parse_homeword/: jsonparse.py  package-lock.json  package.json
parse_homeword/files/: cameras.csv  cameras.txt  cameras.yaml
parse_homeword/js/: parse.js
